# smirnovlang

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
Documents/Visual Studio Code/smirnovlang/website/: .gitignore
Documents/Visual Studio Code/smirnovlang/website/docs/: index.html
css/: style.css
docs/: index.html
docs/js/: docs.js
examples/: file_io.smirnov  hello.smirnov  innovative.smirnov  sql_queries.smirnov  testing_demo.smirnov  versioning_demo.smirnov
js/: main.js
src/: main.cpp
src/ast/: ast.cpp  ast.h
src/codegen/: codegen.cpp  codegen.h
src/lexer/: lexer.cpp  lexer.h  token.h
src/parser/: parser.cpp  parser.h
src/runtime/: runtime.cpp
src/vm/: vm.cpp  vm.h
tests/: CMakeLists.txt  test_main.cpp
website/docs/css/: docs.css
